# rocprobe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
docs/: architecture.md  mi300x-tuning.md  optimization.md
examples/: basic.rs
examples/matmul/: tiled.cpp
examples/vec_add/: Makefile  main.cpp
python/: pyproject.toml
python/rocprobe/: __init__.py  client.py
src/: main.rs  metrics.rs  output.rs  profiler.rs
src/metrics/: hardware.rs  mod.rs  thermal.rs
src/output/: benchmark.rs  mod.rs
src/profiler/: mod.rs  rocm_smi.rs  roofline.rs  trace_parser.rs  wavefront.rs
tests/: integration_test.rs
tests/fixtures/: mi300x_trace.json  sample_trace.json
