[package]
name = "rocprobe"
version = "0.3.1"
edition = "2021"
authors = ["huang-poi"]
description = "A lightweight ROCm GPU profiler CLI for AMD MI300X accelerators"
license = "MIT"
repository = "https://github.com/huang-poi/rocprobe"
homepage = "https://github.com/huang-poi/rocprobe"
documentation = "https://docs.rs/rocprobe"
readme = "README.md"
keywords = ["rocm", "gpu", "profiler", "mi300x", "amd"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.75"
build = "build.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
colored = "2.1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
signal-hook = "0.3"
indicatif = "0.17"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"

[features]
default = ["color-output"]
color-output = ["colored"]
python = ["pyo3"]
json-output = ["serde_json"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
