[package]
name = "rocprobe"
version = "0.3.1"
edition = "2021"
authors = ["Huang Poi <huangpoi@protonmail.com>"]
description = "Lightweight ROCm GPU profiler CLI for MI300X"
license = "MIT"
repository = "https://github.com/huang-poi/rocprobe"
keywords = ["rocm", "gpu", "profiler", "amd", "mi300x"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
anyhow = "1.0"
chrono = "0.4"
libc = "0.2"

[features]
default = []
gpu-tests = []
