[package]
name = "rocprobe"
version = "0.1.0"
edition = "2021"
description = "Lightweight ROCm GPU profiler for kernel timing, occupancy, and memory bandwidth"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
anyhow = "1.0"
chrono = "0.4"
colored = "2.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"

# chore: bump to v0.2.0
